<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="195dp"
    android:layout_height="260dp"
    android:layout_marginStart="7dp"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="3dp"

    app:cardBackgroundColor="#345D5067"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/berline"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/title"
            android:adjustViewBounds="true"
            android:padding="1dp"
            android:scaleType="fitXY"
            />

        <TextView
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainImage"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="10dp"
            android:text="@string/mercedes_eqs_580"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/odometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/_28_000km"
            android:textColor="@color/black"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/electrique"
            android:textColor="@color/black"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/productionyear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/montpellier"
            android:textColor="@color/black"
            android:textSize="11sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/_50_000"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:textSize="11sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>