<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.RegisterFormFragment3">

    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="470dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="180dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_baseline_add_business_24" />

            <EditText
                android:id="@+id/organisationInput"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom__input"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="@string/organisation"
                android:inputType="text"
                android:singleLine="true"
                android:textColorHint="@color/lightGray40"/>

            <EditText
                android:id="@+id/adresseInput"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom__input"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="@string/adresse"
                android:inputType="text"
                android:singleLine="true"
                android:textColorHint="@color/lightGray40"/>


            <EditText
                android:id="@+id/zipCodeInput"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom__input"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="@string/code_postal"
                android:inputType="number"
                android:singleLine="true"
                android:textColorHint="@color/lightGray40"/>

            <TextView
                android:id="@+id/cityInput"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom__input"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="@string/ville"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:singleLine="true"
                android:textColorHint="@color/lightGray40"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/back_form"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_button_pink_reverse"
                    android:gravity="center"
                    android:text="@string/retour"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/confirm_register"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_button_pink"
                    android:gravity="center"
                    android:text="@string/confirmer"
                    android:textColor="@color/white"/>


            </LinearLayout>





        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>