<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    android:id="@+id/homePage"
    android:fitsSystemWindows="true"
    tools:context=".Fragments.HomePageFragment"
    tools:openDrawer="end">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/side_bar_hamburger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_menu_40" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_baseline_notifications_none_40" />

            <TextView
                android:id="@+id/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <LinearLayout
                android:id="@+id/categoriesLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/categories"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="10dp"
                    android:text="@string/all"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/bb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="7dp"
                    android:text="@string/Break"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/berline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="7dp"
                    android:text="@string/berline"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/citadine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="7dp"
                    android:text="@string/citadine"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="7dp"
                    android:text="@string/sport"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/filterLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoriesLayout"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/search_bar"
                    android:layout_width="fill_parent"
                    android:layout_height="70dp"
                    android:layout_margin="13dp"
                    app:cardBackgroundColor="#D268448C"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="3dp">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded">

                        <TextView
                            android:layout_width="250dp"
                            android:layout_height="match_parent"
                            android:layout_margin="20dp"
                            android:background="@android:color/transparent"
                            android:gravity="left"
                            android:hint="@string/Que_recherchez_vous"
                            android:inputType="none"
                            android:maxLines="1"

                            android:textColor="@color/white"
                            android:textColorHint="@color/black"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_magnify_white_36dp"

                            />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>




            </LinearLayout>


            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/filterLayout"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <include layout="@layout/big_cardview_car_shimmer" />

                            <include layout="@layout/big_cardview_car_shimmer" />


                        </LinearLayout>


                    </com.facebook.shimmer.ShimmerFrameLayout>


                </LinearLayout>


            </HorizontalScrollView>

        </RelativeLayout>

    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/side_bar_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/sidebar_header"
        app:menu="@menu/side_bad_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>